2017-??-?? v0.4.0
	* FEATURE: support multiple starting points
	* FEATURE: allow user-friendly field names
	* FEAUTRE: new test suite
	* CHANGE: search extensions in /usr/lib/efind instead of
	          /etc/efind
	* CHANGE: renamed --list-extensions option to --print-extensions
	* CHANGE: renamed --show-blacklist option to --print-blacklist
	* FIX: recognize regex and iregex attributes
	* FIX: allow filter functions as first function argument
	* FIX: always return error code if find child process fails

2017-10-31 v0.3.1
	* FEATURE: not-operator
	* FEATURE: EFIND_EXTENSION_PATH environment variable for
	           additional extension directories

2017-08-15 v0.3.0
	* FEATURE: --order-by option
	* FEATURE: gettext support
	* FEATURE: german translation

2017-07-16 v0.2.2
	* FEATURE: --show-blacklist option to print blacklisted extensions
	* CHANGE: replaced libavcall with libffi

2017-07-04: v0.2.1
	* FEATURE: --log-level option to enable logging with different
	           verbosities
	* FEATURE: --enable-log-color option to print colored log
	           messages
	* FEATURE: "empty" flag to test if a regular file or directory
	           is empty
	* FEATURE: "filesystem" property to test the filesystem a file
	           is on
	* CHANGE: renamed --maxdepth option to --max-depth
	* FIX: initialize all getline() parameters properly when reading
               from standard input

2017-06-24: v0.2.0 (Jean Malaurie)
	* FEATURE: Python 2 support for extensions
	* FEATURE: regular expression support (regex & iregex attribute)
	* FEATURE: added --printf option
	* FEATURE: increased maximum allowed expression length

2017-05-13: v0.1.1
	* FEATURE: blacklist support
	  (make it possible to exclude extensions from being loaded)
	* FIX: don't import same module twice

2017-05-06: v0.1.0 (Belzoni)
	* first release